# MultiAutoGpt

.github/workflows/: platform-autgpt-deploy-prod.yml  platform-autogpt-deploy.yaml
autogpt_platform/autogpt_libs/: pyproject.toml
autogpt_platform/backend/: pyproject.toml
autogpt_platform/frontend/: package.json
autogpt_platform/market/: pyproject.toml
