[tool.poetry]
name = "autogpt-platform-backend"
version = "0.1.0"
description = "A platform for building AI-powered agentic workflows"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"
packages = [{ include = "backend" }]


[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^9.4.3"
anthropic = "^0.39.0"
apscheduler = "^3.10.4"
autogpt-libs = { path = "../autogpt_libs", develop = true }
click = "^8.1.7"
croniter = "^2.0.5"
discord-py = "^2.4.0"
fastapi = "^0.115.4"
feedparser = "^6.0.11"
flake8 = "^7.0.0"
google-api-python-client = "^2.151.0"
google-auth-oauthlib = "^1.2.1"
groq = "^0.11.0"
jinja2 = "^3.1.4"
jsonref = "^1.1.0"
jsonschema = "^4.22.0"
ollama = "^0.3.0"
openai = "^1.54.0"
praw = "~7.8.1"
prisma = "^0.15.0"
psutil = "^5.9.8"
pydantic = "^2.7.2"
pydantic-settings = "^2.6.1"
pyro5 = "^5.15"
pytest = "^8.2.1"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
sentry-sdk = "1.45.0"
supabase = "^2.9.1"
tenacity = "^8.3.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
websockets = "^12.0"
youtube-transcript-api = "^0.6.2"
googlemaps = "^4.10.0"
replicate = "^0.34.1"
pinecone = "^5.3.1"
[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"
httpx = "^0.27.0"
pytest-watcher = "^0.4.2"
requests = "^2.32.3"
ruff = "^0.5.2"
pyright = "^1.1.371"
isort = "^5.13.2"
black = "^24.4.2"
aiohappyeyeballs = "^2.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "backend.app:main"
rest = "backend.rest:main"
ws = "backend.ws:main"
executor = "backend.exec:main"
cli = "backend.cli:main"
format = "linter:format"
lint = "linter:lint"
test = "run_tests:test"

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
